--- a/index.html
+++ b/index.html
@@ -146,19 +146,7 @@
 		<img src="ichefs.png" class="chef-image" alt="Three people cooking" width="auto" height="400">
 	</aside>
 	<p class="meet-chefs-text">
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
-		This is some text. This is some text. This is some text.
+		Meet the culinary contributors of "Love, Yan"! The Posadas family
 	</p>
 	<br><br><br><br>
 
