--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<img src="ichefs.png" class="chef-image" alt="Three people cooking" width="auto" height="400">
 	</aside>
 	<p class="meet-chefs-text">
-		Meet the culinary contributors of "Love, Yan"! The Posadas family
+		Meet the culinary contributors of "Love, Yan"! The Posadas family is very food-oriented due to there being many chefs in the family.
 	</p>
 	<br><br><br><br>
 
