--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
 		<img src="ichefs.png" class="chef-image" alt="Three people cooking" width="auto" height="400">
 	</aside>
 	<p class="meet-chefs-text">
-		Meet the culinary contributors of "Love, Yan"! The Posadas family is very food-oriented due to there being many chefs in the family.
+		Meet the culinary contributors of "Love, Yan"! The Posadas family is very food-oriented due to 
+		there being many chefs in the family. Whether being a hobbyist cook, or a decorated professional chef, 
+		each contributor has years of cooking experience under their belt.
 	</p>
 	<br><br><br><br>
 
