--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 	</aside>
 	<p class="meet-chefs-text">
 		Meet the culinary contributors of "Love, Yan"! The Posadas family is very food-oriented due to 
-		there being many chefs in the family. Whether being a hobbyist cook, or a decorated professional chef, 
-		each contributor has years of cooking experience under their belt.
+		there being many chefs in the family. Whether being a hobbyist cook, or a decorated professional 
+		chef, each contributor has years of cooking experience under their belt.
 	</p>
 	<br><br><br><br>
 
