--- a/Recipes.html
+++ b/Recipes.html
@@ -17,11 +17,11 @@
 <body>
 
 <!--navigation bar-->
-	<nav class="navigation-bar">
+<nav class="navigation-bar">
 	<img src="logoL.png" class="logo" alt="Love, Yan logo" width="auto" height="60">
-		<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/About.html" style="text-decoration:none;">About</a>
-		<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/Recipes.html" style="text-decoration:none;">Recipes</a>
-		<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/index.html" style="text-decoration:none;">Home</a>
+		<a href="About.html" style="text-decoration:none;">About</a>
+		<a href="Recipes.html" style="text-decoration:none;">Recipes</a>
+		<a href="index.html" style="text-decoration:none;">Home</a>
 	</nav>
 	
 	
