--- a/Adobo.html
+++ b/Adobo.html
@@ -47,7 +47,7 @@
 	<p class="desc">
 		The national dish of the Philippines. A salty, savory, and saucy pork dish.
 	</p>
-	<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/About.html" style="text-decoration:none;" class="about">Recipe by: Arlene Posadas</a>
+	<a href="About.html" style="text-decoration:none;" class="about">Recipe by: Arlene Posadas</a>
 	<p class="info">
 		<b>Prep:</b> &nbsp; 10 minutes &nbsp;&nbsp;
 		<b>Cook:</b> &nbsp; 45 minutes &nbsp;&nbsp;
@@ -171,7 +171,7 @@
 	</section>
 <!--game-->
 	<section class="container">
-		<iframe class="responsive-iframe" src="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/iframe-adobo.html"></iframe>
+		<iframe class="responsive-iframe" src="iframe-adobo.html"></iframe>
 	</section>
 </main>
 
