--- a/Leche-Flan.html
+++ b/Leche-Flan.html
@@ -47,7 +47,7 @@
 	<p class="desc">
 		A decadent custard with a rich caramel sauce.
 	</p>
-	<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/About.html" style="text-decoration:none;" class="about">Recipe by: Arnaldo Posadas</a>
+	<a href="About.html" style="text-decoration:none;" class="about">Recipe by: Arnaldo Posadas</a>
 	<p class="info">
 		<b>Prep:</b> &nbsp; 10 minutes &nbsp;&nbsp;
 		<b>Cook:</b> &nbsp; 45 minutes &nbsp;&nbsp;
@@ -158,7 +158,7 @@
 	</section>
 <!--game-->
 	<section class="container">
-		<iframe class="responsive-iframe" src="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/iframe-leche-flan.html"></iframe>
+		<iframe class="responsive-iframe" src="iframe-leche-flan.html"></iframe>
 	</section>
 </main>
 
