--- a/Recipes.html
+++ b/Recipes.html
@@ -43,7 +43,7 @@
 	<!-- Lumpia -->
 	<main class="recipe-card">
 	  <section class="thumbnails">
-		<a target="_blank" href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/lumpia.html">
+		<a target="_blank" href="lumpia.html">
 		  <img src="ilumpiac.png" alt="Plate of lumpia" width="600" height="400">
 		</a>
 		<section class="caption">
@@ -59,7 +59,7 @@
 	<!-- Adobo -->
 	<main class="recipe-card">
 	  <section class="thumbnails">
-		<a target="_blank" href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/Adobo.html">
+		<a target="_blank" href="Adobo.html">
 		  <img src="iadoboc.png" alt="Pork adobo plate" width="600" height="400">
 		</a>
 		<section class="caption">
@@ -75,7 +75,7 @@
 	<!-- Tinola -->
 	<main class="recipe-card">
 	  <section class="thumbnails">
-		<a target="_blank" href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/tinola.html">
+		<a target="_blank" href="tinola.html">
 		  <img src="itinolac.png" alt="Bowl of tinola soup" width="600" height="400">
 		</a>
 		<section class="caption">
@@ -91,7 +91,7 @@
 	<!-- Leche flan -->
 	<main class="recipe-card">
 	  <section class="thumbnails">
-		<a target="_blank" href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/Leche-Flan.html">
+		<a target="_blank" href="Leche-Flan.html">
 		  <img src="ileche-flanc.png" alt="Plate of leche flan" width="600" height="400">
 		</a>
 		<section class="caption">
