--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<p class="cta-text">
 				Traditional Filipino recipes from our kitchen to yours. Let's start cooking together!
 			</p>
-			<button class="cta-button" onClick="window.location='file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/Recipes.html';">Get Started</button> 
+			<button class="cta-button" onClick="window.location='Recipes.html';">Get Started</button> 
 		</section>
 		<img src="ihero.png" class="hero-image" alt="table spread of food" width="900" height="600">
 	</main>
