--- a/tinola.html
+++ b/tinola.html
@@ -47,7 +47,7 @@
 	<p class="desc">
 		A comforting chicken soup packed with flavor.
 	</p>
-	<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/About.html" style="text-decoration:none;" class="about">Recipe by: Alyanna Posadas</a>
+	<a href="About.html" style="text-decoration:none;" class="about">Recipe by: Alyanna Posadas</a>
 	<p class="info">
 		<b>Prep:</b> &nbsp; 15 minutes &nbsp;&nbsp;
 		<b>Cook:</b> &nbsp; 60 minutes &nbsp;&nbsp;
@@ -184,7 +184,7 @@
 	</section>
 <!--game-->
 	<section class="container">
-		<iframe class="responsive-iframe" src="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/iframe-tinola.html"></iframe>
+		<iframe class="responsive-iframe" src="iframe-tinola.html"></iframe>
 	</section>
 </main>
 
