--- a/lumpia.html
+++ b/lumpia.html
@@ -48,7 +48,7 @@
 	<p class="desc">
 		Crispy, simple, and delicious. A classic Filipino snack or side dish.
 	</p>
-	<a href="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/About.html" style="text-decoration:none;" class="about">Recipe by: Arnaldo Posadas</a>
+	<a href="About.html" style="text-decoration:none;" class="about">Recipe by: Arnaldo Posadas</a>
 	<p class="info">
 		<b>Prep:</b> &nbsp; 20 minutes &nbsp;&nbsp;
 		<b>Cook:</b> &nbsp; 10 minutes &nbsp;&nbsp;
@@ -217,7 +217,7 @@
 	</section>
 <!--game-->
 	<section class="container">
-		<iframe class="responsive-iframe" src="file:///C:/Users/jondr/OneDrive/Documents/work/ENU%20Y2/Web%20tech/CW2/iframe-lumpia.html"></iframe>
+		<iframe class="responsive-iframe" src="iframe-lumpia.html"></iframe>
 	</section>
 </main>
 
