--- a/iframe-lumpia.html
+++ b/iframe-lumpia.html
@@ -126,7 +126,7 @@ body {
 	  
 		if(dataSourceId === dataTargetId) {
 			e.target.insertAdjacentHTML('afterbegin', dataSourceId);
-			e.target.style = 'border: none; background: #70c2b8';
+			e.target.style = 'border: none; background: #fa9e9e';
 		
 		let sourceElemDataId = 'span[data-source-id="' + dataSourceId + '"]';
 		let sourceElemSpanTag = document.querySelector(sourceElemDataId);
