--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@
 	<h2 class="name">
 		Chef Arnaldo Posadas
 	</h2>
-		<p class="desc"><img src="idad.png" alt="chef dad stir frying noodles" width="auto" height="350" id="image">
+		<p class="desc"><img src="idad.png" alt="Chef stir frying noodles" width="auto" height="350" id="image">
 		Arnaldo Posadas has been a professional chef for 20+ years. Arnaldo has been cooking for as long as he can 
 		remember. “I would see [chefs] cut so fast and think: How can I do that without cutting a finger?! This is amazing!”.
 		He moved to America in his early teenage years and later finished his vocational schooling in Chicago, Illinois. 
@@ -67,7 +67,7 @@
 	<h2 class="name">
 		Arlene Posadas
 	</h2>
-		<p class="desc"><img src="imom.png" alt="woman making soup" width="auto" height="350">
+		<p class="desc"><img src="imom.png" alt="Woman making soup" width="auto" height="350">
 		Arlene Posadas is a hobbyist chef and baker. Her specialty, featured on this website, is pork adobo.
 		She finds cooking fun and a great stress reliever. Cooking and food is important to her for maintaining
 		a healthy lifestyle. Some of her other favorite things to cook 
