--- a/About.html
+++ b/About.html
@@ -67,7 +67,7 @@
 	<h2 class="name">
 		Arlene Posadas
 	</h2>
-		<p class="desc"><img src="imom.png" alt="Woman making soup" width="auto" height="350">
+		<p class="desc"><img src="imom.PNG" alt="Woman making soup" width="auto" height="350">
 		Arlene Posadas is a hobbyist chef and baker. Her specialty, featured on this website, is pork adobo.
 		She finds cooking fun and a great stress reliever. Cooking and food is important to her for maintaining
 		a healthy lifestyle. Some of her other favorite things to cook 
@@ -81,7 +81,7 @@
 	<h2 class="name">
 		Alyanna Posadas
 	</h2>
-		<p class="descr"><img src="ime.png" alt="Woman mixing ingredients" width="auto" height="350">
+		<p class="descr"><img src="ime.PNG" alt="Woman mixing ingredients" width="auto" height="350">
 		Alyanna Posadas is a hobbyist baker and cook. Starting from childhood, her love for food and cooking
 		came from her dad. Growing up with Asian flavors and living in a western country, she found that the easiest
 		way to feel connected to her heritage was through food. Alyanna cooks nearly every day and loves experimenting.
