--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@
 	<h2 class="name">
 		Chef Arnaldo Posadas
 	</h2>
-		<p class="desc"><img src="idad.png" alt="Chef stir frying noodles" width="auto" height="350" id="image">
+		<p class="desc"><img src="idad.PNG" alt="Chef stir frying noodles" width="auto" height="350" id="image">
 		Arnaldo Posadas has been a professional chef for 20+ years. Arnaldo has been cooking for as long as he can 
 		remember. “I would see [chefs] cut so fast and think: How can I do that without cutting a finger?! This is amazing!”.
 		He moved to America in his early teenage years and later finished his vocational schooling in Chicago, Illinois. 
